# Pridge-Client

./: .gitignore  ADDITIONAL_TERMS.md  BUILDING.md  README.md  pyproject.toml  requirements-release.txt
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  release.yml
packaging/pyinstaller/: Pridge-Client.spec
packaging/windows/: Pridge-Client.iss  PrintBridge-Client.iss
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1  finalize_macos_app.py  generate_checksums.py  generate_release_notes.py  prepare_build.py  release_common.py
src/pridge_client/: __init__.py  __main__.py  api.py  app.py  autostart.py  config.py  gui.py  logging_setup.py  printer_backends.py  printers.py  strings.py  tray.py  version.py  worker.py
src/pridge_client/webui/: about.html  about.js  app.js  index.html  server.js  settings.js  strings.js  styles.css
src/printbridge_client/: __init__.py  __main__.py  app.py  autostart.py  build_info.py  config.py  gui.py  logging_setup.py  models.py  platform_window.py  printer_backends.py  printers.py  strings.py  tray.py  version.py  worker.py
src/printbridge_client/webui/: about.html  about.js  app.js  index.html  server.html  server.js  settings.js  strings.js  styles.css
src/printbridge_endpoint/: __init__.py  __main__.py  api.py  app.py  autostart.py  config.py  gui.py  logging_setup.py  models.py  platform_window.py  printers.py  strings.py  tray.py  version.py  worker.py
src/printbridge_endpoint/webui/: about.html  about.js  app.js  index.html  server.html  server.js  settings.html  settings.js  strings.js  styles.css
tests/: test_api.py  test_app.py  test_autostart.py  test_build_info.py  test_config.py  test_gui.py  test_logging_setup.py  test_platform_window.py  test_printers.py  test_release_configuration.py  test_release_tools.py  test_worker.py
