[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "printbridge-client-agent"
version = "1.0.0"
description = "Client-side desktop printing agent for PrintBridge"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "pywebview>=5.0",
    "pyobjc-core>=10.0; platform_system == 'Darwin'",
    "pyobjc-framework-Cocoa>=10.0; platform_system == 'Darwin'",
    "pyobjc-framework-Quartz>=10.0; platform_system == 'Darwin'",
    "pyobjc-framework-WebKit>=10.0; platform_system == 'Darwin'",
    "pyobjc-framework-security>=10.0; platform_system == 'Darwin'",
    "pyobjc-framework-UniformTypeIdentifiers>=10.0; platform_system == 'Darwin'",
]

[project.optional-dependencies]
secure = ["keyring>=24"]
tray = [
    "pystray==0.19.5",
    "Pillow>=10",
]
windows = ["pywin32>=306; platform_system == 'Windows'"]
linux = ["pycups>=2.0; platform_system == 'Linux'"]

[project.scripts]
printbridge-client = "printbridge_endpoint.__main__:main"
printbridge-endpoint = "printbridge_endpoint.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
printbridge_endpoint = ["py.typed", "webui/*.html", "webui/*.css", "webui/*.js", "webui/vendor/*.js", "webui/assets/*.png"]
