# SPDX-FileCopyrightText: 2026 Sayeh Ava Pazouki
# SPDX-License-Identifier: GPL-3.0-or-later
# SPDX-FileComment: Additional terms apply; see ADDITIONAL_TERMS.md.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pridge-client"
version = "1.1.0"
description = "Desktop printing client for PrintBridge"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
    "requests>=2.31",
    "pywebview>=5.0",
    "pyobjc-core>=10.0; platform_system == 'Darwin'",
    "pyobjc-framework-Cocoa>=10.0; platform_system == 'Darwin'",
    "pyobjc-framework-Quartz>=10.0; platform_system == 'Darwin'",
    "pyobjc-framework-WebKit>=10.0; platform_system == 'Darwin'",
    "pyobjc-framework-security>=10.0; platform_system == 'Darwin'",
    "pyobjc-framework-UniformTypeIdentifiers>=10.0; platform_system == 'Darwin'",
]

[project.optional-dependencies]
secure = ["keyring>=24"]
tray = [
    "pystray==0.19.5",
    "Pillow>=10",
]
windows = ["pywin32>=306; platform_system == 'Windows'"]
linux = ["pycups>=2.0; platform_system == 'Linux'"]

[project.scripts]
pridge-client = "printbridge_client.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
printbridge_client = ["py.typed", "webui/*.html", "webui/*.css", "webui/*.js", "webui/vendor/*.js", "webui/assets/*.png"]

[tool.setuptools]
license-files = ["LICENSE", "ADDITIONAL_TERMS.md"]
